Fixing some layout issues

--- a/src/components/MetagraphTokens/MetagraphTokens.module.scss
+++ b/src/components/MetagraphTokens/MetagraphTokens.module.scss
@@ -47,7 +47,7 @@
   }
 
   > div {
-    width: 28%;
+    width: 20%;
     margin-left: 2rem;
   }
 
