--- a/src/components/SearchTokenBar/SearchTokenBar.module.scss
+++ b/src/components/SearchTokenBar/SearchTokenBar.module.scss
@@ -67,10 +67,6 @@
   line-height: 20px;
 }
 
-.shortSearchInput {
-  display: none;
-}
-
 .searchInput:focus {
   outline: none;
 }
@@ -98,20 +94,15 @@
     width: 90%;
     align-items: flex-start;
   }
+
+  .searchInput {
+    display: flex;
+    margin-top: 7px;
+  }
+
   .searchButton {
     margin-top: 1rem;
     width: 100%;
-  }
-  .searchInput {
-    display: none;
-  }
-  .shortSearchInput {
-    display: block;
-    position: absolute;
-    left: 60px;
-    height: 60%;
-    border: none;
-    font-size: 20px;
   }
 
   .searchBlock {
@@ -131,21 +122,12 @@
     margin-top: 1rem;
     width: 100%;
   }
-  .searchInput {
-    display: none;
-  }
-  .shortSearchInput {
-    display: block;
-    position: absolute;
-    left: 60px;
-    height: 89%;
-    width: calc(100% - 100px);
-    border: none;
-    font-size: 20px;
-  }
 
-  .shortSearchInput:focus {
-    outline: none;
+  .searchInput {
+    display: flex;
+    margin-top: 7px;
+    margin-left: -20px;
+    width: 60%;
   }
 
   .searchBlock {
@@ -154,10 +136,28 @@
   }
 
   .searchIcon {
-    width: 45px;
-    height: 45px;
+    width: 10px;
+    height: 10px;
+    margin-top: 15px;
+    margin-left: 15px;
   }
 
+  .searchIcon:before {
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    transform: translate(-4px, -4px);
+  }
+  
+  .searchIcon:after {
+    content: '';
+    position: absolute;
+    width: 3px;
+    height: 12px;
+    background: $gray-400;
+    transform: translate(6px, 6px) rotate(315deg);
+  }
 
   @supports (-webkit-touch-callout: none) {
     .searchButton {
@@ -170,11 +170,5 @@
       display: flex;
       height: 40%;
     }
-  }
-}
-
-@supports (-webkit-touch-callout: none) {
-  .shortSearchInput {
-    height: 80%;
   }
 }
