--- a/src/views/AddressView/AddressDetails.module.scss
+++ b/src/views/AddressView/AddressDetails.module.scss
@@ -37,7 +37,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
+  margin: 20px 0px;
+
   .searchTokens {
     width: 400px;
   }
@@ -160,7 +161,7 @@
   border: 1px solid $grayCool-200;
   border-radius: 8px;
   width: 100%;
-  margin-bottom: 2rem;
+  margin: 2rem 0px;
 }
 
 .txFlexRow {
@@ -233,6 +234,11 @@
     margin-left: 2rem;
     margin-right: 2rem;
   }
+  .row5 {
+    justify-content: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
   .spanContent {
     margin-left: 2rem;
     margin-right: 2rem;
@@ -249,12 +255,12 @@
 
 @media screen and (min-width: $md) and (max-width: 805px) {
   .fullWidth3 {
-    grid-template-rows: 5% 6% 8% 5% 36% 10%;
+    grid-template-rows: 10% 10% 15% 5% 36% 10%;
   }
 }
 
 @media screen and (min-width: 805px) and (max-width: $lg) {
   .fullWidth3 {
-    grid-template-rows: 5% 6% 8% 5% 36% 10%;
+    grid-template-rows: 5% 6% 15% 5% 36% 10%;
   }
 }
